--- a/MysiePysieService.Tests/packages.config
+++ b/MysiePysieService.Tests/packages.config
@@ -10,6 +10,7 @@
   <package id="Microsoft.AspNet.Razor.pl" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages.pl" version="3.2.7" targetFramework="net472" />
+  <package id="Microsoft.Net.Compilers" version="3.5.0" targetFramework="net472" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="MSTest.TestAdapter" version="1.2.0" targetFramework="net472" />
   <package id="MSTest.TestFramework" version="1.3.2" targetFramework="net472" />
